Update styles.css fixed a bug on small screen resposiveness

--- a/styles.css
+++ b/styles.css
@@ -296,7 +296,7 @@ code{
     .project-1,
     .project-2,
     .project-3,
-    .project-4
+    .project-4,
     .project-5{
         padding: 0px 20px;
     }
